[gd_scene load_steps=7 format=3 uid="uid://c03hfjgc365a5"]

[ext_resource type="Script" path="res://Game/Scenes/Friends/friend_list.gd" id="1_7wufj"]
[ext_resource type="Script" path="res://Game/Scenes/Friends/dp_panel_friend.gd" id="1_tw0kg"]
[ext_resource type="Script" path="res://Game/Scenes/Friends/panel_friend.gd" id="3_j20p6"]
[ext_resource type="Texture2D" uid="uid://bg7x2ctwel2m" path="res://Game/Ressources/UI/Friends/invite_friend_logo.png" id="3_pp163"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0dgr"]
bg_color = Color(0, 0, 0, 0.235294)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcigo"]
bg_color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="friend_list" type="Control"]
layout_mode = 3
anchor_right = 0.151
anchor_bottom = 0.684
offset_right = -0.200012
offset_bottom = -0.119995
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_7wufj")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0, 0, 0, 0.509804)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x0dgr")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FRIENDS"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="add_friend" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_pp163")
ignore_texture_size = true
stretch_mode = 0

[node name="form_add_friend" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="friend_name" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/form_add_friend"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_styles/normal = SubResource("StyleBoxFlat_kcigo")

[node name="confirm_add" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/form_add_friend"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dp_panel_friend" type="Node2D" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
script = ExtResource("1_tw0kg")

[node name="panel_friend" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/margin_right = 10
script = ExtResource("3_j20p6")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 0

[node name="friend_name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "trgelectro"
vertical_alignment = 1

[node name="level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Lvl 150"
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="invite_button" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_pp163")
ignore_texture_size = true
stretch_mode = 0

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/CenterContainer/add_friend" to="." method="_on_add_friend_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/form_add_friend/confirm_add" to="." method="_on_confirm_add_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend/HBoxContainer/CenterContainer/invite_button" to="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/panel_friend" method="_on_invite_button_pressed"]
